add: wallet and import wallet
